refactor: add ESP32 specific stdlib, bump version to 0.2.0, fix build warning, and update example dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(
-    SRCS "mquickjs.c" "dtoa.c" "libm.c" "cutils.c"
-    INCLUDE_DIRS "."
-)
+set(srcs "esp.c" "mquickjs.c" "dtoa.c" "libm.c" "cutils.c")
+
+idf_component_register(SRCS ${srcs}
+                       INCLUDE_DIRS "include")
